# dgteam

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
config/: model_blacklist.csv
docs/: ARCHITECTURE.md  BACKUP_AND_RESTORE.md  DEPLOYMENT_BLUEPRINT.md  MIGRATION_PLAN.md  OPERATIONS.md  PRODUCTION_DEPLOYMENT.md  ROLLBACK.md  WECHAT_CLAWBOT.md  WECHAT_OFFICIAL.md  WECHAT_OFFICIAL_ARCHITECTURE.md
rules/: default_rules.json
scripts/: Set-Utf8Console.ps1  archive_wechat_failed_tasks.py  benchmark_wechat_official_dual_lane.py  benchmark_wechat_official_models.py  check_encoding.py  fix_encoding.py  live_release_backfill.py  ops_runtime_audit.py  prune_storage.py  register_collect_and_sync_task.ps1  run_agent.ps1  run_collect_and_sync.ps1  run_prune_storage.ps1  run_publish_api.ps1  run_query_api.ps1  run_wechat_clawbot_bridge.ps1  run_wechat_official_bridge.ps1  run_wechat_official_worker.ps1  smoke_linked_chain.py  sync_release.ps1  sync_wechat_official_menu.ps1  trusted_runner_preflight.py  trusted_runner_register.py  unregister_collect_and_sync_task.ps1  upload_release.ps1
tests/: conftest.py  test_archive_wechat_failed_tasks.py  test_data_quality_engine.py  test_dev_cli.py  test_encoding_guard.py  test_env_loading.py  test_migrated_stack.py  test_operations_contracts.py  test_prod_collect_and_sync_paths.py  test_prune_storage.py  test_publish_api_http_contracts.py  test_query_api_contracts.py  test_query_api_health.py  test_query_search_experience.py  test_query_search_hints.py  (+18 more)
(+133 files in other folders)
